--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
       <title>
           CRLS Takes
       </title>
@@ -59,3 +60,4 @@
       <h2>
         Contact Us
       </h2>
+</html>
