--- a/home.html
+++ b/home.html
@@ -5,6 +5,42 @@
           CRLS Takes
       </title>
   </head>
-  <body>
-      Welcome to Cambridge Takes
-  </body>
+    <h1>
+      Blogs
+    </h1>
+      <h2>
+        Sports
+      </h2>
+      <h2>
+        Pop Culture
+      </h2>
+      <h2>
+        Mass News
+      </h2>
+    <h1>
+      Takes
+    </h1>
+      <h2>
+        Scalding
+      </h2>
+      <h2>
+        Hot
+      </h2>
+      <h2>
+        Lukewarm
+      </h2>
+      <h2>
+        Cool
+      </h2>
+      <h2>
+        Freezing Cold
+      </h2>
+    <h1>
+      Write
+    </h1>
+    <h1>
+      My Profile
+    </h1>
+    <h1>
+      About
+    </h1>
