--- a/home.html
+++ b/home.html
@@ -38,9 +38,24 @@
     <h1>
       Write
     </h1>
+      <h2>
+        Blog
+      </h2>
+      <h2>
+        Take
+      </h2>
     <h1>
       My Profile
     </h1>
     <h1>
       About
     </h1>
+      <h2>
+        What is CRLS Takes
+      </h2>
+      <h2>
+        Writers
+      </h2>
+      <h2>
+        Contact Us
+      </h2>
