--- a/home.html
+++ b/home.html
@@ -1,63 +1,125 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
-      <title>
-          CRLS Takes
-      </title>
-  </head>
-    <h1>
-      Blogs
-    </h1>
-      <h2>
-        Sports
-      </h2>
-      <h2>
-        Pop Culture
-      </h2>
-      <h2>
-        Mass News
-      </h2>
-    <h1>
-      Takes
-    </h1>
-      <h2>
-        Scalding
-      </h2>
-      <h2>
-        Hot
-      </h2>
-      <h2>
-        Lukewarm
-      </h2>
-      <h2>
-        Cool
-      </h2>
-      <h2>
-        Freezing Cold
-      </h2>
-    <h1>
-      Write
-    </h1>
-      <h2>
-        Blog
-      </h2>
-      <h2>
-        Take
-      </h2>
-    <h1>
-      My Profile
-    </h1>
-    <h1>
-      About
-    </h1>
-      <h2>
-        What is CRLS Takes
-      </h2>
-      <h2>
-        Writers
-      </h2>
-      <h2>
-        Contact Us
-      </h2>
+    <head>
+        <title>CRLS Takes</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <meta content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <style>
+          .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+          }
+          @media
+          (min-width:768px) {
+            .bd-placeholder.img-lg {
+              font-size: 3.5rem;
+            }
+          }
+        </style>
+        <link href="starter-template.css" rel="stylesheet">
+        <h1>
+          Blogs
+        </h1>
+          <h2>
+            Sports
+          </h2>
+          <h2>
+            Pop Culture
+          </h2>
+          <h2>
+            Mass News
+          </h2>
+        <h1>
+          Takes
+        </h1>
+          <h2>
+            Scalding
+          </h2>
+          <h2>
+            Hot
+          </h2>
+          <h2>
+            Lukewarm
+          </h2>
+          <h2>
+            Cool
+          </h2>
+          <h2>
+            Freezing Cold
+          </h2>
+        <h1>
+          Write
+        </h1>
+          <h2>
+            Blog
+          </h2>
+          <h2>
+            Take
+          </h2>
+        <h1>
+          My Profile
+        </h1>
+        <h1>
+          About
+        </h1>
+          <h2>
+            What is CRLS Takes
+          </h2>
+          <h2>
+            Writers
+          </h2>
+          <h2>
+            Contact Us
+          </h2>
+    </head>
+    <body>
+      <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <a class="navbar-brand" href="#">Navigation Bar</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="navbarsExampleDefault" class="collapse navbar-collaspe">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">
+                  Home
+                  <span class="sr-only">(Current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="firstPage.html">First Page</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Second Page</a>
+              </li>
+              <li class="nav-iten dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+            </ul>
+            <form class="form-inline mt-2 mt-md-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
+      </header>
+      <div class="container">
+        <br />
+        <br />
+        <br />
+        <p text="centered">
+          <a href="firstPage.html"> Click here! </a>
+          <br />
+          {[(link)]}
+          {[(link)]}
+          <br />
+        </p>
+      </div>
+    </body>
 </html>
