--- a/home.html
+++ b/home.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>CRLS Takes</title>
+      <meta charset="utf-8">
+      <meta content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>My Life</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-        <meta content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
         <style>
           .bd-placeholder-img {
             font-size: 1.125rem;
@@ -16,96 +20,38 @@
             }
           }
         </style>
-        <link href="starter-template.css" rel="stylesheet">
-        <h1>
-          Blogs
-        </h1>
-          <h2>
-            Sports
-          </h2>
-          <h2>
-            Pop Culture
-          </h2>
-          <h2>
-            Mass News
-          </h2>
-        <h1>
-          Takes
-        </h1>
-          <h2>
-            Scalding
-          </h2>
-          <h2>
-            Hot
-          </h2>
-          <h2>
-            Lukewarm
-          </h2>
-          <h2>
-            Cool
-          </h2>
-          <h2>
-            Freezing Cold
-          </h2>
-        <h1>
-          Write
-        </h1>
-          <h2>
-            Blog
-          </h2>
-          <h2>
-            Take
-          </h2>
-        <h1>
-          My Profile
-        </h1>
-        <h1>
-          About
-        </h1>
-          <h2>
-            What is CRLS Takes
-          </h2>
-          <h2>
-            Writers
-          </h2>
-          <h2>
-            Contact Us
-          </h2>
     </head>
     <body>
       <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <a class="navbar-brand" href="#">Navigation Bar</a>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">CRLS Takes</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div id="navbarsExampleDefault" class="collapse navbar-collaspe">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">
-                  Home
-                  <span class="sr-only">(Current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="firstPage.html">First Page</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">Second Page</a>
-              </li>
-              <li class="nav-iten dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-            </ul>
-            <form class="form-inline mt-2 mt-md-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+          <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav mr-auto mt-2">
+                    <li class="nav-item"><a class="nav-link" href="/quote">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/buy">Write</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/sell">Featured</a></li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Takes</a>
+                      <div class="dropdown-menu" aria-labelledby="dropdown01">
+                        <a class="dropdown-item" href="#">Freezing</a>
+                        <a class="dropdown-item" href="#">Hot</a>
+                        <a class="dropdown-item" href="#">Scalding</a>
+                      </div>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto mt-2">
+                    <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                </ul>
+                <ul>
+                  <form class="form-inline mt-2 mt-md-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+                </ul>
           </div>
         </nav>
       </header>
@@ -113,6 +59,8 @@
         <br />
         <br />
         <br />
+        Hello, world! I'm Will Cooper. I'm introducing myself to you because my
+        web programming class professors have asked me to. Here are a few tings about me:
         <p text="centered">
           <a href="firstPage.html"> Click here! </a>
           <br />
