--- a/home.html
+++ b/home.html
@@ -32,11 +32,13 @@
                 <ul class="navbar-nav mr-auto mt-2">
                     <li class="nav-item"><a class="nav-link" href="/quote">Blogs</a></li>
                     <li class="nav-item"><a class="nav-link" href="/buy">Write</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/sell">Featured</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/sell">My Profile</a></li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Takes</a>
                       <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Freezing</a>
+                        <a class="dropdown-item" href="#">Freezing Cold</a>
+                        <a class="dropdown-item" href="#">Cool</a>
+                        <a class="dropdown-item" href="#">Lukewarm</a>
                         <a class="dropdown-item" href="#">Hot</a>
                         <a class="dropdown-item" href="#">Scalding</a>
                       </div>
