--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>My Life</title>
+        <title>CRLS Takes</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
@@ -61,14 +61,9 @@
         <br />
         <br />
         <br />
-        Hello, world! I'm Will Cooper. I'm introducing myself to you because my
-        web programming class professors have asked me to. Here are a few tings about me:
+        Welcome to CRLS Takes
         <p text="centered">
-          <a href="firstPage.html"> Click here! </a>
-          <br />
-          {[(link)]}
-          {[(link)]}
-          <br />
+          <a href="google.com"> Click here! </a>
         </p>
       </div>
     </body>
