--- a/home.html
+++ b/home.html
@@ -30,11 +30,15 @@
           </button>
           <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav mr-auto mt-2">
-                    <li class="nav-item"><a class="nav-link" href="/quote">Blogs</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/buy">Write</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/sell">My Profile</a></li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Takes</a>
+                      <a class="nav-link dropdown-toggle" href="blogs.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blogs</a>
+                      <div class="dropdown-menu" aria-labelledby="dropdown01">
+                        <a class="dropdown-item" href="#">Sports</a>
+                        <a class="dropdown-item" href="#">Pop Culture</a>
+                        <a class="dropdown-item" href="#">Mass News</a>
+                      </div>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="takes.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Takes</a>
                       <div class="dropdown-menu" aria-labelledby="dropdown01">
                         <a class="dropdown-item" href="#">Freezing Cold</a>
                         <a class="dropdown-item" href="#">Cool</a>
@@ -43,6 +47,8 @@
                         <a class="dropdown-item" href="#">Scalding</a>
                       </div>
                     </li>
+                    <li class="nav-item"><a class="nav-link" href="write.html">Write</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">My Profile</a></li>
                 </ul>
                 <ul class="navbar-nav ml-auto mt-2">
                     <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
