--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         <br />
         Welcome to CRLS Takes
         <p text="centered">
-          <a href="google.com"> Click here! </a>
+          <a href="https://www.google.com"> Click here! </a>
         </p>
       </div>
     </body>
