--- a/layout.html
+++ b/layout.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
 
@@ -8,27 +7,19 @@
         <link href="/static/styles.css" rel="stylesheet">
         <title>CRLS Takes</title>
     </head>
-
     <body>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
-
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/explore">Explore</a></li>
                         <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
                     </ul>
-                    <ul class="navbar-nav ml-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                    <ul>
+                        <li><a class="nav-link" href="/logout">Log Out</a></li>
                     </ul>
             </div>
         </nav>
-
-        <footer class="small text-center text-muted">
-            Data provided for free by <a href="https://iextrading.com/developer">IEX</a>. View <a href="https://iextrading.com/api-exhibit-a/">IEX’s Terms of Use</a>.
-        </footer>
-
     </body>
-
 </html>
