--- a/blogs.html
+++ b/blogs.html
@@ -33,18 +33,18 @@
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="blogs.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blogs</a>
                       <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Sports</a>
-                        <a class="dropdown-item" href="#">Pop Culture</a>
-                        <a class="dropdown-item" href="#">Mass News</a>
+                        <a class="dropdown-item" href="sportsblogs.html">Sports</a>
+                        <a class="dropdown-item" href="popblogs.html">Pop Culture</a>
+                        <a class="dropdown-item" href="massnewsblogs.html">Mass News</a>
                       </div>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="takes.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Takes</a>
                       <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Freezing Cold</a>
-                        <a class="dropdown-item" href="#">Cool</a>
-                        <a class="dropdown-item" href="#">Lukewarm</a>
-                        <a class="dropdown-item" href="#">Hot</a>
-                        <a class="dropdown-item" href="#">Scalding</a>
+                        <a class="dropdown-item" href="freezingcold.html">Freezing Cold</a>
+                        <a class="dropdown-item" href="cool.html">Cool</a>
+                        <a class="dropdown-item" href="lukewarm.html">Lukewarm</a>
+                        <a class="dropdown-item" href="hot.html">Hot</a>
+                        <a class="dropdown-item" href="scalding.html">Scalding</a>
                       </div>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="write.html">Write</a></li>
