--- a/hot.html
+++ b/hot.html
@@ -24,7 +24,7 @@
     <body>
       <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">CRLS Takes</a>
+          <a class="navbar-brand" href="home.html">CRLS Takes</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
