--- a/takesG.html
+++ b/takesG.html
@@ -46,18 +46,37 @@
           </ul>
         </nav>
       </header>
-      <div>
+      <div class="container">
         <br />
         <br />
         <br />
-        <h1 class="center">
-          Welcome to CRLS <span class="green">TAKES</span>!
+        <h1>
+          <span style="color:green;">T</span>
+          <span style="color:#7CFC00;">A</span>
+          <span style="color:#006400;">K</span>
+          <span style="color:#2E8B57;">E</span>
+          <span style="color:#00FA9A;">S</span>
         </h1>
-        <img class="center" src="CRLS1.jpg" alt="Image of CRLS" style="width:800px;height:600px;" />
       </div>
-      <p class="center">
-        Just to make it a little easier to navigate, the only working links (currently) are this page (index),
-        the about sections (about.html), general takes (takesG.html), and general Blogs (blogsG.html).
-      </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm"><button type="button" class="btn btn-primary">Freezing Cold</button></div>
+          <div class="col-sm"><button type="button" class="btn btn-info">Cool</button></div>
+          <div class="col-sm"><button type="button" class="btn btn-secondary">Lukewarm</button></div>
+          <div class="col-sm"><button type="button" class="btn btn-warning">Hot</button></div>
+          <div class="col-sm"><button type="button" class="btn btn-danger">Scalding</button></div>
+        </div>
+        <br />
+        <p class="readableText">
+          These buttons don't really do anything yet, but their making incorporates the grid
+          component of bootstrap that this problem set is required to have. If you go to the  <a href="about.html">about</a>
+          section, you can learn what these buttons will be used for in the near future.
+        </p>
+        <br />
+        <p id="necessaryId">
+          This would be like a footnote which credits the authors and references publishers or someting.
+          For now I just need it here to fulfill the ID requirement.
+        </p>
+      </div>
     </body>
 </html>
