--- a/about.html
+++ b/about.html
@@ -5,72 +5,74 @@
       <meta content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>CRLS Takes</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="styles.css"/>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-        <style>
-          .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-          }
-          @media
-          (min-width:768px) {
-            .bd-placeholder.img-lg {
-              font-size: 3.5rem;
-            }
-          }
-        </style>
     </head>
     <body>
       <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <a class="navbar-brand" href="home.html">CRLS Takes</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav mr-auto mt-2">
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="blogs.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blogs</a>
-                      <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="sportsblogs.html">Sports</a>
-                        <a class="dropdown-item" href="popblogs.html">Pop Culture</a>
-                        <a class="dropdown-item" href="massnewsblogs.html">Mass News</a>
-                      </div>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="takes.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Takes</a>
-                      <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="freezingcold.html">Freezing Cold</a>
-                        <a class="dropdown-item" href="cool.html">Cool</a>
-                        <a class="dropdown-item" href="lukewarm.html">Lukewarm</a>
-                        <a class="dropdown-item" href="hot.html">Hot</a>
-                        <a class="dropdown-item" href="scalding.html">Scalding</a>
-                      </div>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="write.html">Write</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">My Profile</a></li>
-                </ul>
-                <ul class="navbar-nav ml-auto mt-2">
-                    <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
-                </ul>
-                <ul>
-                  <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
-                </ul>
+          <div class="dropdown">
+           <button class="dropbtn" href="blogs.html">Takes</button>
+           <div class="dropdown-content">
+             <a href="takesG.html">General</a>
+             <a href="error.html">Freezing Cold</a>
+             <a href="error.html">Cool</a>
+             <a href="error.html">Lukewarm</a>
+             <a href="error.html">Hot</a>
+             <a href="error.html">Scalding</a>
+           </div>
           </div>
+          <div class="dropdown">
+           <button class="dropbtn" href="blogs.html">Blogs</button>
+           <div class="dropdown-content">
+             <a href="blogsG.html">General</a>
+             <a href="error.html">Mass News</a>
+             <a href="error.html">Pop</a>
+             <a href="error.html">Sports</a>
+             <a href="error.html">Featured</a>
+           </div>
+          </div>
+          <ul class="navbar-nav mr-auto mt-2">
+            <li class="nav-item"><a class="nav-link" href="write.html">Write</a></li>
+            <li class="nav-item"><a class="nav-link" href="error.html">My Profile</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          </ul>
+          <ul class="navbar-nav ml-auto mt-2">
+            <li class="nav-item"><a class="nav-link" href="error.html">Register</a></li>
+            <li class="nav-item"><a class="nav-link" href="error.html">Log In</a></li>
+          </ul>
         </nav>
       </header>
       <div class="container">
         <br />
         <br />
         <br />
-        Welcome to CRLS Takes
-        <p text="centered">
-          <a href="https://www.google.com"> Click here! </a>
+        <h1 class="center">
+          CRLS <span class="green">TAKES</span>
+        </h1>
+        <p class="readableText">
+          CRLS Takes is an attempt by a CRLS student to replace the sports section of
+          Register Forum (the high school newspaper). This blogsite will include a variety of fucntions
+          which will make it easier for students to share opinions and articles on everything
+          sports-related, both within the school and for other sports organizations.
+        </p>
+        <p class="readableText">
+          For the time being, many of the links you see do not do anything. In the future,
+          we'd like for there to be two main functions for CRLS Takes -- Takes and Blogs.
+          Blogs are your typical opinionated/unopinionated articles, whereas Takes are only a
+          sentence or two. Once we have a dynamic website which allows users to register for accounts
+          and to write Takes and Blogs, users can vote on Takes (five options: Freezing Cold, Cool,
+          Lukewarm, Hot, and Scalding). The Takes can be found through the dropdown menu in the
+          navigation bar, and each take can have a comment section and a link to a connected Blog.
+        </p>
+        <p class="readableText">
+          Hopefully that wasn't too difficult to follow. If it was, hopefully future updates to
+          website will clear things up.
         </p>
       </div>
+      <img class="center" src="CRLS2.jpg" alt="Image of CRLS" height=500>
+
     </body>
 </html>
