--- a/blogsG.html
+++ b/blogsG.html
@@ -46,18 +46,55 @@
           </ul>
         </nav>
       </header>
-      <div>
+      <div class="container">
         <br />
         <br />
         <br />
-        <h1 class="center">
-          Welcome to CRLS <span class="green">TAKES</span>!
+        <h1>
+          <span class="green">BBBLLLLOOOOOOGGGGGSSS</span>
         </h1>
-        <img class="center" src="CRLS1.jpg" alt="Image of CRLS" style="width:800px;height:600px;" />
+        <p text="centered">
+          So I don't really know what role a table would play in the final CRLS Takes website, but for the time being,
+          here is a table filled with random values so that I can get a good grade for my Web Development class.
+        </p>
       </div>
-      <p class="center">
-        Just to make it a little easier to navigate, the only working links (currently) are this page (index),
-        the about sections (about.html), general takes (takesG.html), and general Blogs (blogsG.html).
+      <div class="container">
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Seed</th>
+                <th scope="col">Team</th>
+                <th scope="col">City</th>
+                <th scope="col">Degree of Goodness</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Partiots</td>
+                <td>New England (Boston)</td>
+                <td>Best in the world</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Packers</td>
+                <td>Green Bay</td>
+                <td>OK</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Rams</td>
+                <td>Los Angeles</td>
+                <td>Tbh idk but not as good as the Patriots</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <p id="necessaryId">
+        This would be like a footnote which credits the authors and references publishers or someting.
+        For now I just need it here to fulfill the ID requirement.
       </p>
     </body>
 </html>
