--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@
     <head>
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>CRLS Takes</title>
+        <title>CRLS TAKES
+        </title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles.css"/>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -13,7 +14,7 @@
     <body>
       <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <a class="navbar-brand" href="home.html">CRLS Takes</a>
+          <a class="navbar-brand" href="home.html">CRLS <span class="silver">TAKES</span></a>
           <div class="dropdown">
            <button class="dropbtn" href="blogs.html">Takes</button>
            <div class="dropdown-content">
