--- a/takesG.html
+++ b/takesG.html
@@ -13,7 +13,7 @@
     <body>
       <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <a class="navbar-brand" href="home.html">CRLS Takes</a>
+          <a class="navbar-brand" href="home.html">CRLS <span class="silver">TAKES</span></a>
           <div class="dropdown">
            <button class="dropbtn" href="blogs.html">Takes</button>
            <div class="dropdown-content">
